--- a/public/network-management/index.html
+++ b/public/network-management/index.html
@@ -13,6 +13,7 @@
     <link rel="icon" type="image/x-icon" href="./favicon/favicon.ico">
     
     <link rel="stylesheet" href="./styles.css">
+    <script src="./js/state_flashcards.js" ></script>
     <script src="./js/state.js"></script>
     <script src="./js/utils.js"></script>
     <script src="./js/flashcards.js"></script>
