--- a/public/network-management/index.html
+++ b/public/network-management/index.html
@@ -14,6 +14,7 @@
     
     <link rel="stylesheet" href="./styles.css">
     <script src="./js/state_flashcards.js" ></script>
+    <script src="./js/state_modules.js" ></script>
     <script src="./js/state.js"></script>
     <script src="./js/utils.js"></script>
     <script src="./js/flashcards.js"></script>
