--- a/public/network-architecture/index.html
+++ b/public/network-architecture/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interaktive Lernplattform: Netzwerkmanagement & DBV</title>    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Interaktive Lernplattform: Netzwerkarchitekturen & DBV</title>    <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
             darkMode: 'class',
@@ -20,6 +20,7 @@
 
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./print.css">
+    <link rel="stylesheet" href="./modal.css">
     
     <script src="./js/state_flashcards.js" ></script>
     <script src="./js/state_modules.js" ></script>
